<resources>
    <string name="app_name">Publications</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="text_login">Login</string>
    <string name="text_home">Home</string>
    <string name="text_required_field">Required field</string>
    <string name="text_invalid_email">Email is not valid</string>
    <string name="text_draft">Draft</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_settings">Settings</string>
</resources>