<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.MainActivity">

    <com.artlite.bslibrary.ui.fonted.BSEditText
        android:id="@+id/edit_login"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/text_email"
        android:layout_marginBottom="@dimen/dimen_8"
        android:textColorHint="#8e8e92"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.artlite.bslibrary.ui.fonted.BSEditText
        android:id="@+id/edit_password"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/text_password"
        android:textColorHint="#8e8e92"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.artlite.bslibrary.ui.fonted.BSButton
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:id="@+id/button_login"
        android:layout_marginBottom="@dimen/dimen_8"
        android:text="@string/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.artlite.bslibrary.ui.fonted.BSButton
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:id="@+id/button_register"
        android:layout_marginBottom="@dimen/dimen_8"
        android:text="@string/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.artlite.bslibrary.ui.fonted.BSButton
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:id="@+id/button_forgot_password"
        android:layout_marginBottom="@dimen/dimen_8"
        android:text="@string/text_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>