<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:padding="@dimen/dimen_5"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/item_1"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_1"
            android:layout_width="match_parent"
            android:src="@drawable/ic_home_tab"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="2"
            android:tint="@android:color/white"
            android:clickable="false"
            app:tint="@color/colorAccent"
            />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:id="@+id/label_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_home"
            android:textSize="@dimen/text_15"
            android:textStyle="bold"
            android:textColor="@color/colorBarDefault"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_2"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_2"
            android:layout_width="match_parent"
            android:src="@drawable/ic_drafts_tab"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="2"
            android:tint="@android:color/white"
            android:clickable="false"
            app:tint="@color/colorBarDefault"
            />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:id="@+id/label_2"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_draft"
            android:textSize="@dimen/text_15"
            android:textStyle="bold"
            android:textColor="@color/colorBarDefault"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_3"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_3"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/ic_favorite_tab"
            android:tint="@android:color/white"
            android:clickable="false"
            app:tint="@color/colorBarDefault"
            />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:id="@+id/label_3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/text_favorites"
            android:textSize="@dimen/text_15"
            android:textStyle="bold"
            android:textColor="@color/colorBarDefault"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_4"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_4"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_settings_tab"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="2"
            android:tint="@android:color/white"
            android:clickable="false"
            app:tint="@color/colorBarDefault"
            />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:id="@+id/label_4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/text_settings"
            android:textSize="@dimen/text_15"
            android:textStyle="bold"
            android:textColor="@color/colorBarDefault"/>
    </LinearLayout>

</LinearLayout>